# rcmon

./: .gitignore  CMakeLists.txt  README  makefile  platformio.ini
doc/: as5600_magnet_angles.avif  github.picofreq.url  github.pwm-in.url  github.pwmcounter.url  hackaday.accurate-cycle-counting-on-rp2040-micropython.url  iosoft.blog.picofreq.rp2040.url  notes.angle.md  notes.frequency.md
lib/as5600/: AS5600.cpp  AS5600.h  CMakeLists.txt
lib/led/: CMakeLists.txt  monoled.c  monoled.h  ws2812.c  ws2812.h
src/: arduino-main.cpp  led.c  led.h  led_ws2812b.c  main.c  main.cpp  ws2812.pio
src/blink/: CMakeLists.txt  main.c  ws2812.pio
src/irmon/: main.c
src/mon/: CMakeLists.txt
src/receive/: receive.pio
src/scan/: CMakeLists.txt  main.c
tools/: feather-rp2040-blink.py  i2c-ping.py  i2c-scan.py  i2c.scan.circuit.py  i2c.scan.micro.py  rp2040-one-blink.py
tools/angle-monitor/: CMakeLists.txt  main.c  main.cpp
tools/blink/: CMakeLists.txt  main.c
